@@ -1,6 +1,6 @@
 begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
 begin_comment
-comment|/**  * Licensed to the Apache Software Foundation (ASF) under one or more  * contributor license agreements.  See the NOTICE file distributed with  * this work for additional information regarding copyright ownership.  * The ASF licenses this file to You under the Apache License, Version 2.0  * (the "License"); you may not use this file except in compliance with  * the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
+comment|/*  * Licensed to the Apache Software Foundation (ASF) under one or more  * contributor license agreements.  See the NOTICE file distributed with  * this work for additional information regarding copyright ownership.  * The ASF licenses this file to You under the Apache License, Version 2.0  * (the "License"); you may not use this file except in compliance with  * the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
 end_comment
 
 begin_package
@@ -2220,6 +2220,53 @@ argument_list|)
 expr_stmt|;
 if|if
 condition|(
+literal|null
+operator|!=
+name|uniqueKeyField
+operator|.
+name|getDefaultValue
+argument_list|()
+condition|)
+block|{
+name|String
+name|msg
+init|=
+literal|"uniqueKey field ("
+operator|+
+name|uniqueKeyFieldName
+operator|+
+literal|") can not be configured with a default value ("
+operator|+
+name|uniqueKeyField
+operator|.
+name|getDefaultValue
+argument_list|()
+operator|+
+literal|")"
+decl_stmt|;
+name|log
+operator|.
+name|error
+argument_list|(
+name|msg
+argument_list|)
+expr_stmt|;
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|SolrException
+operator|.
+name|ErrorCode
+operator|.
+name|SERVER_ERROR
+argument_list|,
+name|msg
+argument_list|)
+throw|;
+block|}
+if|if
+condition|(
 operator|!
 name|uniqueKeyField
 operator|.
@@ -2459,6 +2506,50 @@ literal|" as integer. The whole field will be copied."
 argument_list|)
 expr_stmt|;
 block|}
+block|}
+if|if
+condition|(
+name|dest
+operator|.
+name|equals
+argument_list|(
+name|uniqueKeyFieldName
+argument_list|)
+condition|)
+block|{
+name|String
+name|msg
+init|=
+literal|"uniqueKey field ("
+operator|+
+name|uniqueKeyFieldName
+operator|+
+literal|") can not be the dest of a copyField (src="
+operator|+
+name|source
+operator|+
+literal|")"
+decl_stmt|;
+name|log
+operator|.
+name|error
+argument_list|(
+name|msg
+argument_list|)
+expr_stmt|;
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|SolrException
+operator|.
+name|ErrorCode
+operator|.
+name|SERVER_ERROR
+argument_list|,
+name|msg
+argument_list|)
+throw|;
 block|}
 name|registerCopyField
 argument_list|(
