@@ -1,6 +1,6 @@
 begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
 begin_comment
-comment|/**  * Licensed to the Apache Software Foundation (ASF) under one or more  * contributor license agreements.  See the NOTICE file distributed with  * this work for additional information regarding copyright ownership.  * The ASF licenses this file to You under the Apache License, Version 2.0  * (the "License"); you may not use this file except in compliance with  * the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
+comment|/*  * Licensed to the Apache Software Foundation (ASF) under one or more  * contributor license agreements.  See the NOTICE file distributed with  * this work for additional information regarding copyright ownership.  * The ASF licenses this file to You under the Apache License, Version 2.0  * (the "License"); you may not use this file except in compliance with  * the License.  You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
 end_comment
 
 begin_package
@@ -164,6 +164,13 @@ return|return;
 comment|// Test the cause too in case the expected error is wrapped
 if|if
 condition|(
+literal|null
+operator|!=
+name|e
+operator|.
+name|getCause
+argument_list|()
+operator|&&
 operator|-
 literal|1
 operator|!=
@@ -212,8 +219,6 @@ name|schema
 argument_list|)
 expr_stmt|;
 block|}
-annotation|@
-name|Test
 DECL|method|testSevereErrorsForInvalidFieldOptions
 specifier|public
 name|void
@@ -251,8 +256,6 @@ literal|"bad_field"
 argument_list|)
 expr_stmt|;
 block|}
-annotation|@
-name|Test
 DECL|method|testSevereErrorsForDuplicateFields
 specifier|public
 name|void
@@ -269,8 +272,6 @@ literal|"fAgain"
 argument_list|)
 expr_stmt|;
 block|}
-annotation|@
-name|Test
 DECL|method|testSevereErrorsForDuplicateDynamicField
 specifier|public
 name|void
@@ -287,8 +288,6 @@ literal|"_twice"
 argument_list|)
 expr_stmt|;
 block|}
-annotation|@
-name|Test
 DECL|method|testSevereErrorsForDuplicateFieldType
 specifier|public
 name|void
@@ -305,8 +304,6 @@ literal|"ftAgain"
 argument_list|)
 expr_stmt|;
 block|}
-annotation|@
-name|Test
 DECL|method|testSevereErrorsForUnexpectedAnalyzer
 specifier|public
 name|void
@@ -323,8 +320,6 @@ literal|"StrField (bad_type)"
 argument_list|)
 expr_stmt|;
 block|}
-annotation|@
-name|Test
 DECL|method|testBadExternalFileField
 specifier|public
 name|void
@@ -338,6 +333,29 @@ argument_list|(
 literal|"bad-schema-external-filefield.xml"
 argument_list|,
 literal|"Only float and pfloat"
+argument_list|)
+expr_stmt|;
+block|}
+DECL|method|testUniqueKeyRules
+specifier|public
+name|void
+name|testUniqueKeyRules
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|doTest
+argument_list|(
+literal|"bad-schema-uniquekey-is-copyfield-dest.xml"
+argument_list|,
+literal|"can not be the dest of a copyField"
+argument_list|)
+expr_stmt|;
+name|doTest
+argument_list|(
+literal|"bad-schema-uniquekey-uses-default.xml"
+argument_list|,
+literal|"can not be configured with a default value"
 argument_list|)
 expr_stmt|;
 block|}
